--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weather-app",
   "version": "0.1.0",
+  "homepage": "http://ninanyberg.github.io/weather-app-react",
   "private": true,
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "cypress": "^13.2.0",
-    "eslint-plugin-cypress": "^2.14.0"
+    "eslint-plugin-cypress": "^2.14.0",
+    "gh-pages": "^6.0.0"
   }
 }
